<resources>
    <string name="app_name">DanielsAndrew_KraveGymAndroid</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Phone Number</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="account_type">Account Type</string>
    <string name="already_account">Already have an account?</string>
    <string name="click_here">Click here</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="numbers_only">Phone number can only contain numbers.</string>
    <string name="phone_10">Phone number must contain 10 digits.</string>
    <string name="field_blank">Field cannot be left blank.</string>
    <string name="pass_minimum">Password must be 4 characters at minimum.</string>
    <string name="pass_match">Passwords do not match.</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account?</string>
    <string-array name="account_types">
        <item>Trainer</item>
    </string-array>
</resources>
