<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:background="@color/colorPrimary"
        android:drawableBottom="@drawable/line"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:gravity="center|bottom"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/img_line"
        android:tint="@color/colorPrimaryDark"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:paddingBottom="15dp"
        android:layout_weight="5"
        android:src="@drawable/line"
        android:scaleType="fitStart"/>

    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:background="#FFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:ems="10"
                android:inputType="phone"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <EditText
                android:id="@+id/tv_first"
                android:hint="@string/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <EditText
                android:id="@+id/tv_last"
                android:hint="@string/last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:ems="10"
                android:inputType="textPassword"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/account_type"-->
                <!--android:labelFor="@id/sp_account_type"/>-->

            <Spinner
                android:id="@+id/sp_account_type"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/account_types"
                style="@style/bordered_spinner"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/already_account"
                style="@style/TextViewTheme"/>

            <TextView
                android:id="@+id/tv_nav_login"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:gravity="center_vertical"
                android:text="@string/click_here"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                style="@style/TextViewTheme"/>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/create_account" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

<!--<EditText-->
<!--android:id="@+id/password"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:hint="@string/prompt_password"-->
<!--android:imeActionId="6"-->
<!--android:imeActionLabel="@string/action_sign_in_short"-->
<!--android:imeOptions="actionUnspecified"-->
<!--android:inputType="textPassword"-->
<!--android:maxLines="1"-->
<!--android:singleLine="true" />-->