<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:gravity="center|bottom"
        android:paddingTop="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/img_line"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:paddingBottom="15dp"
        android:layout_weight="5"
        android:src="@drawable/line"
        android:scaleType="fitStart"/>

    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:background="#FFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:ems="10"
                android:inputType="phone"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                style="@style/TextViewTheme"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/need_an_account"
                style="@style/TextViewTheme"/>

                <TextView
                    android:id="@+id/tv_nav_register"
                    style="@style/TextViewTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/click_here"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>